--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* CSS */
+.slider {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+.left-arrow, .right-arrow {
+  font-size: 2rem;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.left-arrow {
+  position: absolute;
+  top: 50%;
+  left: 20px; /* Adjust the left position as needed */
+  transform: translateY(-50%);
 }
+
+.right-arrow {
+  position: absolute;
+  top: 50%;
+  right: 20px; /* Adjust the right position as needed */
+  transform: translateY(-50%);
+}
+
+ img{
+  margin-top: 5%;
+  width: 80%;
+  height: 80%;
+ }
